# astimate

./: .env.example  .gitignore  HANDOFF.md  README.md
docs/: experiment-h6.md  followups.md  session-2026-06-28.md
experiment/: tasks.toml
experiment/fixtures/: RIPGREP_SOURCE.txt
experiment/fixtures/ripgrep_crates/cli/: Cargo.toml
experiment/fixtures/ripgrep_crates/cli/src/: decompress.rs  hostname.rs  lib.rs
experiment/fixtures/ripgrep_crates/core/: main.rs  messages.rs  search.rs
experiment/fixtures/ripgrep_crates/core/flags/: config.rs  defs.rs  hiargs.rs  lowargs.rs  mod.rs  parse.rs
experiment/fixtures/ripgrep_crates/grep/: Cargo.toml
experiment/fixtures/ripgrep_crates/ignore/: Cargo.toml
experiment/fixtures/ripgrep_crates/ignore/examples/: walk.rs
experiment/fixtures/ripgrep_crates/ignore/src/: default_types.rs  dir.rs  gitignore.rs  lib.rs  overrides.rs  types.rs  walk.rs
experiment/fixtures/ripgrep_crates/ignore/tests/: gitignore_matched_path_or_any_parents_tests.rs
experiment/fixtures/ripgrep_crates/matcher/: Cargo.toml
experiment/fixtures/ripgrep_crates/matcher/src/: interpolate.rs
experiment/fixtures/ripgrep_crates/pcre2/: Cargo.toml
experiment/fixtures/ripgrep_crates/printer/: Cargo.toml
experiment/fixtures/ripgrep_crates/regex/: Cargo.toml
experiment/fixtures/ripgrep_crates/searcher/: Cargo.toml
experiment/harness/: README.md  __init__.py  agent.py  analyze.py  config.py  fixtures.py  gen_ast.py  gen_rag.py  judge.py  llm.py  meaning.csv  run.py  tools.py
results/: .gitkeep
(+30 files in other folders)
